add: get current route
